--- a/rsocket-routing-broker/build.gradle
+++ b/rsocket-routing-broker/build.gradle
@@ -1,6 +1,8 @@
 description = 'RSocket Routing Broker'
 
 dependencies {
+	implementation "io.rsocket:rsocket-core"
+
 	implementation 'io.projectreactor.netty:reactor-netty'
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testImplementation 'org.assertj:assertj-core'
