--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ subprojects {
 
 	repositories {
 		mavenCentral()
+		mavenLocal()
 	}
 
 	dependencyManagement {
@@ -29,7 +30,10 @@ subprojects {
 			dependency "io.rsocket:rsocket-test:${rsocketVersion}"
 			dependency "io.rsocket:rsocket-transport-local:${rsocketVersion}"
 			dependency "io.rsocket:rsocket-transport-netty:${rsocketVersion}"
+			dependency "io.rsocket.routing:rsocket-routing-common:${rsocketRoutingClientVersion}"
+			dependency "org.agrona:agrona:${agronaVersion}"
 			dependency "org.assertj:assertj-core:${assertjVersion}"
+			dependency "org.roaringbitmap:RoaringBitmap:${roaringbitmapVersion}"
 		}
 	}
 
