--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ subprojects {
 			dependency "io.rsocket:rsocket-transport-local:${rsocketVersion}"
 			dependency "io.rsocket:rsocket-transport-netty:${rsocketVersion}"
 			dependency "io.rsocket.routing:rsocket-routing-common:${rsocketRoutingClientVersion}"
+			dependency "io.rsocket.routing:rsocket-routing-frames:${rsocketRoutingClientVersion}"
 			dependency "org.agrona:agrona:${agronaVersion}"
 			dependency "org.assertj:assertj-core:${assertjVersion}"
 			dependency "org.roaringbitmap:RoaringBitmap:${roaringbitmapVersion}"
