--- a/rsocket-routing-broker-spring/build.gradle
+++ b/rsocket-routing-broker-spring/build.gradle
@@ -1,9 +1,9 @@
 description = 'RSocket Routing Broker Spring'
 
 dependencies {
-	implementation project(':rsocket-routing-broker')
-	implementation 'io.rsocket.routing:rsocket-routing-common'
-	implementation 'io.rsocket.routing:rsocket-routing-frames'
+	compile project(':rsocket-routing-broker')
+	compile 'io.rsocket.routing:rsocket-routing-common'
+	compile 'io.rsocket.routing:rsocket-routing-frames'
 
 	implementation 'org.springframework.boot:spring-boot-starter-rsocket'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
