--- a/rsocket-routing-broker-spring/build.gradle
+++ b/rsocket-routing-broker-spring/build.gradle
@@ -5,6 +5,8 @@ dependencies {
 	compile 'io.rsocket.routing:rsocket-routing-common'
 	compile 'io.rsocket.routing:rsocket-routing-frames'
 
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
 	implementation 'org.springframework.boot:spring-boot-starter-rsocket'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
