--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ version=0.0.1-SNAPSHOT
 agronaVersion=1.3.0
 assertjVersion=3.15.0
 junitJupiterVersion=5.4.0
-reactorBomVersion=Dysprosium-SR4
+reactorBomVersion=Dysprosium-SR7
 roaringbitmapVersion=0.8.12
 rsocketRoutingClientVersion=0.0.1-SNAPSHOT
-rsocketVersion=1.0.0-RC6
-springBootVersion=2.2.4.RELEASE
+rsocketVersion=1.0.0
+springBootVersion=2.3.0.RC1
 
