Updates to boot 2.3.0.RELEASE

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,5 @@ reactorBomVersion=Dysprosium-SR7
 roaringbitmapVersion=0.8.12
 rsocketRoutingClientVersion=0.0.1-SNAPSHOT
 rsocketVersion=1.0.0
-springBootVersion=2.3.0.RC1
+springBootVersion=2.3.0.RELEASE
 
