Updates to rsocket-java 1.1, reactor 2020.0.0 and boot 2.4.0
fixes gh-10

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 group=io.rsocket.routing
-version=0.0.1-SNAPSHOT
+version=0.0.2-SNAPSHOT
 
 agronaVersion=1.3.0
 assertjVersion=3.15.0
 junitJupiterVersion=5.4.0
-reactorBomVersion=Dysprosium-SR9
-roaringbitmapVersion=0.8.20
+reactorBomVersion=2020.0.0-M2
+roaringbitmapVersion=0.8.12
 rsocketRoutingClientVersion=0.0.1-SNAPSHOT
-rsocketVersion=1.0.1
-springBootVersion=2.3.1.RELEASE
+rsocketVersion=1.1.0-M1
+springBootVersion=2.4.0-M2
 
