Updates broker transport properties to support custom transports.
Fixes gh-14

--- a/rsocket-routing-broker-spring/src/test/resources/broker1.properties
+++ b/rsocket-routing-broker-spring/src/test/resources/broker1.properties
@@ -1,4 +1,4 @@
 io.rsocket.routing.broker.tcp.port=8011
-io.rsocket.routing.broker.cluster.port=7011
+io.rsocket.routing.broker.cluster.tcp.port=7011
 io.rsocket.routing.broker.broker-id=00000000-0000-0000-0000-000000000011
 logging.level.io.rsocket.routing.broker=DEBUG
