--- a/rsocket-routing-broker-spring/src/test/resources/broker2.yml
+++ b/rsocket-routing-broker-spring/src/test/resources/broker2.yml
@@ -1,6 +1,6 @@
 io.rsocket.routing.broker:
   tcp.port: 8012
-  cluster.port: 7012
+  cluster.tcp.port: 7012
   broker-id: 00000000-0000-0000-0000-000000000012
   brokers:
     - cluster:
