--- a/rsocket-routing-broker-spring/build.gradle
+++ b/rsocket-routing-broker-spring/build.gradle
@@ -3,12 +3,13 @@ description = 'RSocket Routing Broker Spring'
 dependencies {
 	api project(':rsocket-routing-broker')
 	api 'io.rsocket.routing:rsocket-routing-common'
+	api 'io.rsocket.routing:rsocket-routing-common-spring'
 	api 'io.rsocket.routing:rsocket-routing-frames'
-	implementation 'io.rsocket:rsocket-transport-local'
-
+	implementation 'org.springframework.boot:spring-boot-starter-rsocket'
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-	implementation 'org.springframework.boot:spring-boot-starter-rsocket'
+	testImplementation 'io.rsocket:rsocket-transport-local'
+	testImplementation 'io.rsocket.routing:rsocket-routing-client'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
