--- a/.github/workflows/gradle-pr.yml
+++ b/.github/workflows/gradle-pr.yml
@@ -1,14 +1,10 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Pull Request Java CI with Gradle
 
-on:
-  push:
-    branches: [ master ]
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 6 * * *'
+on: [pull_request]
+
 jobs:
   build:
 
@@ -29,7 +25,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      env:
-        BINTRAY_USER: ${{ secrets.bintrayUser }}
-        BINTRAY_KEY: ${{ secrets.bintrayKey }}
-      run: ./gradlew build artifactoryPublish -Dbuild.number=$GITHUB_RUN_ID
+      run: ./gradlew build -Dbuild.number=$GITHUB_RUN_ID
