adds bintray plugin configuration

--- a/build.gradle
+++ b/build.gradle
@@ -65,25 +65,73 @@ subprojects {
 		}
 	}
 
-	// from https://reflectoring.io/publish-snapshots-with-gradle/
-	artifactory {
-		contextUrl = 'https://oss.jfrog.org'
-		publish {
-			repository {
-				repoKey = 'oss-snapshot-local'
-				username = System.getenv('BINTRAY_USER')
-				password = System.getenv('BINTRAY_KEY')
+	if (System.getenv().containsKey('BINTRAY_USER') && System.getenv().containsKey('BINTRAY_KEY')) {
+
+		// from https://reflectoring.io/publish-snapshots-with-gradle/
+		artifactory {
+			contextUrl = 'https://oss.jfrog.org'
+			publish {
+				repository {
+					repoKey = 'oss-snapshot-local'
+					username = System.getenv('BINTRAY_USER')
+					password = System.getenv('BINTRAY_KEY')
+				}
+				defaults {
+					publications(publishing.publications.mavenJava)
+					publishArtifacts = true
+					publishPom = true
+				}
 			}
-			defaults {
-				publications(publishing.publications.mavenJava)
-				publishArtifacts = true
-				publishPom = true
+			resolve {
+				repoKey = 'jcenter'
+			}
+			clientConfig.info.setBuildNumber(System.getProperty('build.number'))
+		}
+	}
+
+	if (System.getenv().containsKey('BINTRAY_USER') && System.getenv().containsKey('BINTRAY_KEY')
+			&& System.getenv().containsKey('SONATYPE_USERNAME') && System.getenv().containsKey('SONATYPE_PASSWORD')) {
+		plugins.withId('com.jfrog.bintray') {
+			bintray {
+				user = System.getenv('BINTRAY_USER')
+				key = System.getenv('BINTRAY_KEY')
+
+				publications = ['mavenJava']
+				publish = true
+				override = true
+
+				pkg {
+					repo = 'RSocket'
+					name = 'rsocket-routing-client'
+					licenses = ['Apache-2.0']
+
+					issueTrackerUrl = 'https://github.com/rsocket-routing/rsocket-routing-client/issues'
+					websiteUrl = 'https://github.com/rsocket-routing/rsocket-routing-client'
+					vcsUrl = 'https://github.com/rsocket-routing/rsocket-routing-client.git'
+
+					githubRepo = 'rsocket-routing/rsocket-routing-client' //Optional Github repository
+					githubReleaseNotesFile = 'README.md' //Optional Github readme file
+
+					version {
+						name = project.version
+						released = new Date()
+						vcsTag = project.version
+
+						gpg {
+							sign = true
+						}
+
+						mavenCentralSync {
+							user = System.getenv('SONATYPE_USERNAME')
+							password = System.getenv('SONATYPE_PASSWORD')
+						}
+					}
+				}
+			}
+			tasks.named("bintrayUpload").configure {
+				onlyIf { System.getenv('SKIP_RELEASE') != "true" }
 			}
 		}
-		resolve {
-			repoKey = 'jcenter'
-		}
-		clientConfig.info.setBuildNumber(System.getProperty('build.number'))
 	}
 
 	test {
