--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,10 @@ subprojects {
 
 }
 
+apply from: "${rootDir}/gradle/publications.gradle"
+
+description = 'RSocket Routing Broker'
+
 wrapper {
 	distributionType = Wrapper.DistributionType.ALL
 }
