--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ assertjVersion=3.15.0
 junitJupiterVersion=5.4.0
 reactorBomVersion=2020.0.0-RC1
 roaringbitmapVersion=0.8.12
-rsocketRoutingClientVersion=0.1.0-SNAPSHOT
+rsocketRoutingClientVersion=0.1.0
 rsocketVersion=1.1.0-M2
 springBootVersion=2.4.0-M3
 
