--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,12 @@
 group=io.rsocket.routing
-version=0.1.0-SNAPSHOT
+version=0.2.0-SNAPSHOT
 
 agronaVersion=1.3.0
 assertjVersion=3.15.0
 junitJupiterVersion=5.4.0
 reactorBomVersion=2020.0.0-RC1
 roaringbitmapVersion=0.8.12
-rsocketRoutingClientVersion=0.1.0
+rsocketRoutingClientVersion=0.2.0-SNAPSHOT
 rsocketVersion=1.1.0-M2
 springBootVersion=2.4.0-M3
 
