--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ version=0.3.0-SNAPSHOT
 agronaVersion=1.9.0
 assertjVersion=3.19.0
 junitJupiterVersion=5.7.0
+mockitoVersion=3.7.7
 reactorBomVersion=2020.0.3
 roaringbitmapVersion=0.9.3
 rsocketRoutingClientVersion=0.2.0-SNAPSHOT
