--- a/rsocket-routing-broker/build.gradle
+++ b/rsocket-routing-broker/build.gradle
@@ -11,5 +11,7 @@ dependencies {
 
 	testImplementation 'org.assertj:assertj-core'
 	testImplementation 'org.junit.jupiter:junit-jupiter'
+	testImplementation 'org.mockito:mockito-core'
+	testImplementation 'org.mockito:mockito-junit-jupiter'
 	testImplementation 'org.slf4j:slf4j-simple'
 }
