Extracts an RSocketQuery interface and allows dynamic loadbalancer algorithm selection. (#19)
Allows dynamic selection of loadbalancer at runtime.

Extracts an RSocketQuery interface.

RSocketLocator adds a `supports(RoutingType)` method.

MulticastRSocketLocator and UnicastRSocketLocator implementations were added. The primary interface will be via the CompositeRSocketLocator.

This also fixes a package tangle between the `locator` and `rsocket` packages by moving locator classes to rsocket package

Fixes gh-18

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,10 @@
 group=io.rsocket.routing
-version=0.2.0-SNAPSHOT
+version=0.3.0-SNAPSHOT
 
 agronaVersion=1.9.0
 assertjVersion=3.19.0
 junitJupiterVersion=5.7.0
+mockitoVersion=3.7.7
 reactorBomVersion=2020.0.3
 roaringbitmapVersion=0.9.3
 rsocketRoutingClientVersion=0.2.0-SNAPSHOT
