--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,6 @@ roaringbitmapVersion=0.9.3
 rsocketRoutingClientVersion=0.2.0-SNAPSHOT
 rsocketVersion=1.1.0
 springBootVersion=2.4.2
+springCloudVersion=2020.0.4-SNAPSHOT
+rsocketRoutingClientSpringVersion=0.2.0-SNAPSHOT
 
