--- a/rsocket-routing-http-bridge/build.gradle
+++ b/rsocket-routing-http-bridge/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation'io.projectreactor:reactor-test'
 }
