--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,14 @@
 group=io.rsocket.routing
 version=0.3.0-SNAPSHOT
 
-agronaVersion=1.9.0
-assertjVersion=3.19.0
-junitJupiterVersion=5.7.0
-mockitoVersion=3.7.7
-reactorBomVersion=2020.0.3
-roaringbitmapVersion=0.9.3
-rsocketRoutingClientVersion=0.2.0-SNAPSHOT
-rsocketVersion=1.1.0
-springBootVersion=2.4.2
-springCloudVersion=2020.0.4-SNAPSHOT
+agronaVersion=1.12.0
+assertjVersion=3.21.0
+junitJupiterVersion=5.8.1
+mockitoVersion=3.12.4
+reactorBomVersion=2020.0.12
+roaringbitmapVersion=0.9.22
+rsocketRoutingClientVersion=0.3.0-SNAPSHOT
+rsocketVersion=1.1.1
+springBootVersion=2.6.0-RC1
+springCloudVersion=2021.0.0-RC1
+
