--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-	id 'com.jfrog.artifactory' version '4.11.0' apply false
-	id 'com.jfrog.bintray' version '1.8.4' apply false
+	id 'com.jfrog.artifactory' version '4.21.0' apply false
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
@@ -9,7 +8,7 @@ subprojects {
 	apply plugin: 'io.spring.dependency-management'
 	apply plugin: 'maven-publish'
 	apply plugin: 'com.jfrog.artifactory'
-	apply plugin: 'com.jfrog.bintray'
+	apply plugin: 'signing'
 
 	sourceCompatibility = '1.8'
 
@@ -18,6 +17,13 @@ subprojects {
         mavenLocal()
 		maven { url 'https://repo.spring.io/snapshot' }
 		maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local' }
+		maven {
+			url = uri("https://maven.pkg.github.com/rsocket-routing/rsocket-routing-client")
+			credentials {
+				username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+				password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+			}
+		}
 	  }
 	  mavenCentral()
 	  maven { url 'https://repo.spring.io/milestone' }
@@ -46,92 +52,26 @@ subprojects {
 		}
 	}
 
-	java {
-		withJavadocJar()
-		withSourcesJar()
-	}
-
-	publishing {
-		publications {
-			mavenJava(MavenPublication) {
-				from components.java
-				versionMapping {
-					usage('java-api') {
-						fromResolutionOf('runtimeClasspath')
-					}
-					usage('java-runtime') {
-						fromResolutionResult()
-					}
-				}
-			}
+	plugins.withType(JavaLibraryPlugin) {
+		task sourcesJar(type: Jar) {
+			classifier 'sources'
+			from sourceSets.main.allJava
 		}
-	}
 
-	if (System.getenv().containsKey('BINTRAY_USER') && System.getenv().containsKey('BINTRAY_KEY')) {
-
-		// from https://reflectoring.io/publish-snapshots-with-gradle/
-		artifactory {
-			contextUrl = 'https://oss.jfrog.org'
-			publish {
-				repository {
-					repoKey = 'oss-snapshot-local'
-					username = System.getenv('BINTRAY_USER')
-					password = System.getenv('BINTRAY_KEY')
-				}
-				defaults {
-					publications(publishing.publications.mavenJava)
-					publishArtifacts = true
-					publishPom = true
-				}
-			}
-			resolve {
-				repoKey = 'jcenter'
-			}
-			clientConfig.info.setBuildNumber(System.getProperty('build.number'))
+		task javadocJar(type: Jar, dependsOn: javadoc) {
+			classifier 'javadoc'
+			from javadoc.destinationDir
 		}
-	}
 
-	if (System.getenv().containsKey('BINTRAY_USER') && System.getenv().containsKey('BINTRAY_KEY')
-			&& System.getenv().containsKey('SONATYPE_USERNAME') && System.getenv().containsKey('SONATYPE_PASSWORD')) {
-		plugins.withId('com.jfrog.bintray') {
-			bintray {
-				user = System.getenv('BINTRAY_USER')
-				key = System.getenv('BINTRAY_KEY')
-
-				publications = ['mavenJava']
-				publish = true
-				override = true
-
-				pkg {
-					repo = 'RSocket'
-					name = 'rsocket-routing-broker'
-					licenses = ['Apache-2.0']
-
-					issueTrackerUrl = 'https://github.com/rsocket-routing/rsocket-routing-broker/issues'
-					websiteUrl = 'https://github.com/rsocket-routing/rsocket-routing-broker'
-					vcsUrl = 'https://github.com/rsocket-routing/rsocket-routing-broker.git'
-
-					githubRepo = 'rsocket-routing/rsocket-routing-broker' //Optional Github repository
-					githubReleaseNotesFile = 'README.md' //Optional Github readme file
-
-					version {
-						name = project.version
-						released = new Date()
-						vcsTag = project.version
-
-						gpg {
-							sign = true
-						}
-
-						mavenCentralSync {
-							user = System.getenv('SONATYPE_USERNAME')
-							password = System.getenv('SONATYPE_PASSWORD')
-						}
+		plugins.withType(MavenPublishPlugin) {
+			publishing {
+				publications {
+					maven(MavenPublication) {
+						from components.java
+						artifact sourcesJar
+						artifact javadocJar
 					}
 				}
-			}
-			tasks.named("bintrayUpload").configure {
-				onlyIf { System.getenv('SKIP_RELEASE') != "true" }
 			}
 		}
 	}
