simplifies test app structure and configuration.
Enables monitors.

Adds third broker node.

--- a/rsocket-routing-broker-spring/src/test/resources/application-broker1.properties
+++ b/rsocket-routing-broker-spring/src/test/resources/application-broker1.properties
@@ -1,4 +1,5 @@
 io.rsocket.routing.broker.uri=tcp://localhost:8011
 io.rsocket.routing.broker.cluster.uri=tcp://localhost:7011
 io.rsocket.routing.broker.broker-id=00000000-0000-0000-0000-000000000011
+io.rsocket.routing.broker.cluster.monitor.enabled=true
 logging.level.io.rsocket.routing.broker=DEBUG
