--- a/rsocket-routing-broker-spring/src/test/resources/application-broker2.yml
+++ b/rsocket-routing-broker-spring/src/test/resources/application-broker2.yml
@@ -1,6 +1,8 @@
 io.rsocket.routing.broker:
   uri: tcp://localhost:8012
-  cluster.uri: tcp://localhost:7012
+  cluster:
+    uri: tcp://localhost:7012
+    monitor.enabled: true
   broker-id: 00000000-0000-0000-0000-000000000012
   brokers:
     - cluster: tcp://localhost:7011
