--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ version=0.3.0-SNAPSHOT
 
 agronaVersion=1.12.0
 assertjVersion=3.21.0
-junitJupiterVersion=5.8.1
+junitJupiterVersion=5.8.2
 mockitoVersion=3.12.4
-reactorBomVersion=2020.0.12
+reactorBomVersion=2020.0.13
 roaringbitmapVersion=0.9.22
 rsocketBrokerClientVersion=0.3.0
 rsocketVersion=1.1.1
-springBootVersion=2.6.0-RC1
+springBootVersion=2.6.1
 springCloudVersion=2021.0.0-RC1
 
