--- a/gradle/sonotype.gradle
+++ b/gradle/sonotype.gradle
@@ -21,7 +21,7 @@ subprojects {
 						repositories {
 							maven {
 								name = "sonatype"
-								url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+								url = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
 								credentials {
 									username project.findProperty("sonatypeUsername")
 									password project.findProperty("sonatypePassword")
