--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'com.jfrog.artifactory' version '4.21.0' apply false
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 subprojects {
@@ -10,7 +10,7 @@ subprojects {
 	apply plugin: 'com.jfrog.artifactory'
 	apply plugin: 'signing'
 
-	sourceCompatibility = '1.8'
+	sourceCompatibility = '17'
 
 	repositories {
 	  if (version.endsWith('SNAPSHOT')) {
