Support For Spring Boot 3 #30 (#31)
* #30 LCM upgrade Java 17, SB-3.0.4, Reactor-2022.0.4, RSocket-1.1.3

* #30 prepare github workflow for Java 17

* #30 fix github workflow

* #30 move autoconfig in spring.factory to new file

* #30 LCM to SB 3.1.x and Java 21

* #30 removed incompatable code from build.grade

* #30 replaced dep section with new versions

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
 	id 'com.jfrog.artifactory' version '4.21.0' apply false
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'io.spring.dependency-management' version '1.1.0'
+	id 'java'
+    id 'maven-publish'
 }
 
 subprojects {
@@ -10,7 +12,7 @@ subprojects {
 	apply plugin: 'com.jfrog.artifactory'
 	apply plugin: 'signing'
 
-	sourceCompatibility = '1.8'
+	sourceCompatibility = '17'
 
 	repositories {
 	  if (version.endsWith('SNAPSHOT')) {
@@ -50,27 +52,14 @@ subprojects {
 			dependency "org.roaringbitmap:RoaringBitmap:${roaringbitmapVersion}"
 		}
 	}
-
-	plugins.withType(JavaLibraryPlugin) {
-		task sourcesJar(type: Jar) {
-			classifier 'sources'
-			from sourceSets.main.allJava
-		}
-
-		task javadocJar(type: Jar, dependsOn: javadoc) {
-			classifier 'javadoc'
-			from javadoc.destinationDir
-		}
-
-		plugins.withType(MavenPublishPlugin) {
-			publishing {
-				publications {
-					maven(MavenPublication) {
-						from components.java
-						artifact sourcesJar
-						artifact javadocJar
-					}
-				}
+	java {
+		withSourcesJar()
+		withJavadocJar()
+	}
+	publishing {
+		publications {
+			mavenJava(MavenPublication) {
+				from components.java
 			}
 		}
 	}
