--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 group=io.rsocket.broker
 version=0.4.0-SNAPSHOT
 
-agronaVersion=1.17.1
-assertjVersion=3.24.2
-junitJupiterVersion=5.9.2
-mockitoVersion=5.2.0
-reactorBomVersion=2022.0.4
-roaringbitmapVersion=0.9.39
-rsocketBrokerClientVersion=0.3.0
-rsocketVersion=1.1.3
-springBootVersion=3.1.5
+agronaVersion=1.20.0
+assertjVersion=3.25.3
+junitJupiterVersion=5.10.2
+mockitoVersion=5.11.0
+reactorBomVersion=2023.0.3
+roaringbitmapVersion=1.0.1
+rsocketBrokerClientVersion=0.4.0-SNAPSHOT
+rsocketVersion=1.1.4
+springBootVersion=3.2.3
 
